CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0RC2     |
+-----------------------+
BUGFIXES
14-03-06    Fixed Config::merge behaviour (Miha Vrhovnik)
14-03-06    Fixed query for listing users with a left join (mstahv)

IMPROVEMENTS
20-03-06    Added Dutch translation (Peter Termaten)
20-03-06    Russian translations updated and enhanced (Dmitry Lakachauskis)
17-03-06    Improvements to module generator, CRUD added (Gerald Fischer)
17-03-06    Guestbook, FAQ, Documentor and Export modules improved, updated Russian
            translations (lakiboy)
17-03-06    Removed CSS hacks (Riccardo Magliocchetti and mstahv)
17-03-06    Additional include paths can now be added via Config
16-03-06    Added ability to implement custom filter chains
14-03-06    Default theme now config driven

+-----------------------+
| VERSION: 0.6.0RC1     |
+-----------------------+
BUGFIXES
21-02-06    Fixed bug: PageMgr does not handle manager names with multiple uppercase
            letters
17-02-06    Fixed bug where cookie path was being incorrectly set due to SEF
            URIs (Miha Vrhovnik)
14-02-06    Fixed bug where session expiry would not be tested on screens where
            requiresAuth was false (during authenticated session)
14-02-06    SQL errors, if existent, correctly returned in articles
09-02-06    Fixed inability to change an article's category (Jayesh Sheth)
03-02-06    Checks for session timeout improved (Andrey Podshivalov)
31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
            (sirphp)

IMPROVEMENTS
08-03-06    Admin GUI complete (Julien Casanova)
04-03-06    Renamed AppController to FrontController
26-02-06    Added printf() method for templates, see
            http://trac.seagullproject.org/wiki/Howto/Templates/WorkingWithTemplates#UsingVariablesinLanguageStrings
            (Andrey Podshivalov)
25-02-06    <link> instead of @import is more reliable for passing GET params